# docs-fill

./: .gitignore  dockerfile  main.py  pyproject.toml  readme.md  translations.json
templates/: fill.html  index.html  style.css
