[project]
name = "docs-fill"
version = "0.1.0"
description = "FastAPI service to dynamically fill DOCX templates with custom data and optionally convert documents to PDF."
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "docx2pdf>=0.1.8",
    "docxtpl>=0.20.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.2",
]

[tool.pyright]
venvPath = '.'
venv = '.venv'
